Style fix on mobile
On mobile, inline code were not going to the next line.
Added specific crayon plugin style to fix this and regenerated a prod.

--- a/style.css
+++ b/style.css
@@ -391,6 +391,14 @@ body{
 }
 
 /***************************************************
+			Wordpress Plugin Specific
+***************************************************/
+
+.crayon-theme-wasav-inline-code{
+	word-break: break-all;
+}
+
+/***************************************************
 			Mobile adaptation
 ***************************************************/
 
